<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:padding="5dp"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/amNfcImg"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/title_nfc"
                        android:src="@drawable/ic_nfc"/>

                    <ImageView
                        android:id="@+id/amLocationImg"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/title_location"
                        android:src="@drawable/ic_location"/>

                    <ImageView
                        android:id="@+id/amInternetImg"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/title_internet"
                        android:src="@drawable/ic_wifi"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/amNfcText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_nfc"
                        android:textSize="16sp"
                        android:gravity="center_horizontal"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/amLocationText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_location"
                        android:gravity="center_horizontal"
                        android:textSize="16sp"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/amInternetText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_internet"
                        android:gravity="center_horizontal"
                        android:textSize="16sp"
                        android:layout_weight="1"/>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="?android:attr/windowBackground"
            app:menu="@menu/navigation" />

    </LinearLayout>

    <ProgressBar
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="invisible" />

</RelativeLayout>